loginDialog view and layout on main view

--- a/source/style/main.less
+++ b/source/style/main.less
@@ -6,3 +6,15 @@
 
 .main-view {
 }
+
+.onyx {
+	direction: rtl;
+}
+
+.frame {
+        border: 2px solid lightblue;
+        padding: 4px;
+        white-space: nowrap;
+        overflow: hidden;
+        margin: 2px;
+}
